# ChangeLog for sys-apps/smartmontools
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/smartmontools/ChangeLog,v 1.80 2008/06/16 03:23:16 jer Exp $

  16 Jun 2008; Jeroen Roovers <jer@gentoo.org> smartmontools-5.38.ebuild:
  Stable for HPPA (bug #225935).

  14 Jun 2008; Christoph Mende <angelos@gentoo.org>
  smartmontools-5.38.ebuild:
  Stable on amd64, bug #225935

  14 Jun 2008; nixnut <nixnut@gentoo.org> smartmontools-5.38.ebuild:
  Stable on ppc wrt bug 225935

  12 Jun 2008; Raúl Porcel <armin76@gentoo.org> smartmontools-5.38.ebuild:
  alpha/ia64/sparc stable wrt #225935

  11 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  smartmontools-5.38.ebuild:
  stable x86, bug 225935

*smartmontools-5.38 (10 Mar 2008)

  10 Mar 2008; Robin H. Johnson <robbat2@gentoo.org>
  +smartmontools-5.38.ebuild:
  Version bump.

*smartmontools-5.37-r1 (10 Mar 2008)

  10 Mar 2008; Robin H. Johnson <robbat2@gentoo.org>
  +smartmontools-5.37-r1.ebuild:
  Add USE=minimal support for setups without the smartd.

  07 Feb 2008; Raúl Porcel <armin76@gentoo.org> smartmontools-5.37.ebuild:
  alpha/ia64 stable

  04 Feb 2008; Fabian Groffen <grobian@gentoo.org>
  smartmontools-5.36-r1.ebuild, smartmontools-5.37.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  29 Jan 2008; Diego Pettenò <flameeyes@gentoo.org> files/smartd.rc:
  Fix init script dependencies to work without a boot runlevel.

  28 Dec 2007; Guy Martin <gmsoft@gentoo.org> smartmontools-5.37.ebuild:
  Added hppa to KEYWORDS.

  29 Sep 2007; Christian Birchinger <joker@gentoo.org>
  smartmontools-5.37.ebuild:
  Added sparc stable keyword

  02 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  smartmontools-5.37.ebuild:
  stable x86, bug 190306

  29 Aug 2007; Christoph Mende <angelos@gentoo.org>
  smartmontools-5.37.ebuild:
  Stable on amd64 wrt bug #190306

*smartmontools-5.37 (10 Feb 2007)

  10 Feb 2007; Mike Frysinger <vapier@gentoo.org>