@@ -4,6 +4,6 @@ DIST smartmontools-5.37.tar.gz 590605 RMD160 e9d18c71340766dc43bf462a4c12cb0d152
 DIST smartmontools-5.38.tar.gz 617326 RMD160 6fcca6e18b14a14b579e8484c769f36b3ce238ea SHA1 90e36f46af7a35336c63868176aa71deef4c9e66 SHA256 b2097320a1fca4851f1377a14f4cc14a46e27d2a44ca017c40a6cb618b2f31e8
 EBUILD smartmontools-5.37-r1.ebuild 1378 RMD160 0b7800a40c3c6a11b88193c95133fcd5b6f7bbea SHA1 1bc5a12afd2692e5501854ded05330ee5aae3b4e SHA256 37b178ee914bc4c9775510ccc7d970b51d1b1c744d5b08ef562f4996d506aba5
 EBUILD smartmontools-5.37.ebuild 1233 RMD160 b4989832dcd39ea6f0d6f17ae134d4c4815e1e20 SHA1 920338ee35fd736289a1aa0423b01c840a6a0e11 SHA256 11303a28f555a948b3b0cd63947ed00df00deb2572ab6d29d3b8ef6d1de87667
-EBUILD smartmontools-5.38.ebuild 1384 RMD160 5d5ede82c727a71e583dadcd18553623c0d49d7f SHA1 a3636409e0a689e9a050352fc2910eb74c20f5e5 SHA256 15ab1118377f303b2ba8a42a98978bde56d4e485b21cc299fea52aea6948c4e0
-MISC ChangeLog 9987 RMD160 e4b00f2c7291d17fb067cd2dfd1a70c7514f4139 SHA1 2ef7d82143e2b94eb299512eab603e7a099ea5e4 SHA256 2682705e33f841962b074b105e29e0dbe2d2c6aed9f27bfbf8895767a3a6a1c7
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+EBUILD smartmontools-5.38.ebuild 1462 RMD160 0d29dd9542f3d2d323ad1522b2e6afa424ad5780 SHA1 40e99be6f5a7044f64930874e480008e19e4e9d3 SHA256 50483f33a512da70d2e11566989ebc98c427e3739a00a8d979122683d1c2981a
+MISC ChangeLog 10205 RMD160 75c17408f7bc1d617fbd13165d552354b745460a SHA1 6e8cdd1afb996442eb95acb0ba9b2101bd37823d SHA256 b507f994db1d9f31dc78d1a4cc2003729ec36eaa0a5d92e235b71dfe64c103b6
+MISC metadata.xml 266 RMD160 d60cb888a5e13f1656de16d13b38e60e909fca14 SHA1 ddaa4497088bd48456301b7ab7115928713fa882 SHA256 bdf7da32dcd39df0f58aa02c64dfd1c5dda0ca1080c9b1001d8e110881a364eb
