@@ -2,4 +2,7 @@
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
 <herd>base-system</herd>
+<use>
+<flag name='minimal'>Do not install the monitoring daemon and associated scripts.</flag>
+</use>
 </pkgmetadata>
