@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/smartmontools
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/smartmontools/ChangeLog,v 1.80 2008/06/16 03:23:16 jer Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/smartmontools/ChangeLog,v 1.81 2009/05/01 13:47:34 robbat2 Exp $
+
+  01 May 2009; Robin H. Johnson <robbat2@gentoo.org> metadata.xml,
+  smartmontools-5.38.ebuild:
+  Per bug #267982, add a description of what USE=minimal does, and issue an
+  info message when you have it enabled.
 
   16 Jun 2008; Jeroen Roovers <jer@gentoo.org> smartmontools-5.38.ebuild:
   Stable for HPPA (bug #225935).
